# physweb

./: .gitignore  nginx.conf
.github/workflows/: deploy.yml
backend/: Cargo.toml
backend/src/: main.rs
backend/src/routes/: constants.rs
frontend/: package-lock.json  package.json  svelte.config.js  vite.config.js
frontend/src/: app.css  app.html
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/auth/login/: +page.svelte
frontend/src/routes/auth/register/: +page.svelte
frontend/src/routes/learn/: +page.svelte
frontend/src/routes/research/: +page.svelte
frontend/src/routes/tutoring/: +page.svelte
legacy/: physweb-backend.service  physweb-frontend.service  physweb_scaffold.sh
legacy/backend/: Cargo.toml
legacy/frontend/: package.json
